# Civilization-Remastered

./: Cargo.toml  README.md
assets/Images/: sv_unitcitizen.dds  sv_unitmilitary.dds
assets/Images/Resources/: Aluminum.dds  Banana.dds  Coal.dds  Cotton.dds  Cow.dds  Dye.dds  Gems.dds  Marble.dds  Oil.dds  Silk.dds  Spices.dds  Sugar.dds  Whale.dds  Wheat.dds
assets/Images/Terrains/: Grassland.dds  Jungle.dds  Mount Kilimanjaro.dds  Mount Sinai.dds  Oasis.dds
assets/Images/UnitIcons/: Janissary.dds  Jet Fighter.dds  Knight.dds  Lancer.dds  Landsknecht.dds  Legion.dds  Longbowman.dds  Longswordsman.dds  Minuteman.dds  (+25 more)
assets/Resources/: Deer.dds  Fish.dds  Gold.dds  Horse.dds  Iron.dds  Ivory.dds  Uranium.dds
assets/Terrains/: Desert.dds  El Dorado.dds  Grand Mesa.dds  Hill.dds  King Solomon's Mines.dds  Ocean.dds  Snow.dds  Uluru.dds  sv_cerro_de_patosi.dds  sv_crater.dds  sv_fallout.dds  sv_fuji.dds  sv_lakevictoria.dds  sv_marsh.dds  sv_mount_kailash.dds  sv_terrainhexplains.dds
assets/shaders/: color_replace.wgsl
src/: assets.rs  custom_material.rs  custom_mesh.rs  game_initialization.rs  generating_map.rs  main.rs  minimap.rs  ruleset.rs  technology.rs  tile_map.rs  unit_component.rs  world_map.rs
src/component/: mod.rs
src/grid/: direction.rs  mod.rs  offset_coordinate.rs
src/map/: mod.rs  tile_query.rs
src/ruleset/: building.rs  era.rs  mod.rs  nation.rs  policy.rs  specialist.rs  terrain.rs  tile_improvement.rs  tile_resource.rs  unique.rs  unit.rs
src/tile_map/: fractal.rs  hex.rs  map_parameters.rs  mod.rs  perlin.rs  tile.rs  tile_index.rs
(+76 files in other folders)
