[package]
name = "civilization_remastered"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
bevy_prototype_lyon = "0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
noise = "0.8"
regex = "1.10"
once_cell = "1.18"
rand = "0.8"
image = "0.24"
