[package]
name = "civilization_remastered"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.14", features = ["dds"]}
bevy_prototype_lyon = "0.12"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.10"
once_cell = "1.19"
rand = "0.8"
image = "0.25"
