[package]
name = "civilization_remastered"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.17", features = ["dds"]}
bevy_asset_loader = { version = "0.24.0-rc.1" }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.10"
civ_map_generator = {git = "https://github.com/lishaoxia1985/civ-map-generator.git", branch = "master"}
enum-map = "2.7.3"
